--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,8 @@
 # https://www.playframework.com/documentation/latest/Configuration
 Ollama {
-
+    host = "http://localhost:11434"
+    model = "llama3:latest"
+    request-timeout-seconds = 500
 }
 
 Conversation {
