--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 Ollama {
     host = "http://localhost:11434"
-    model = "llama3:latest"
+    model = "llama3.2"
     request-timeout-seconds = 500
 }
 
