--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,6 +5,10 @@ Ollama {
     request-timeout-seconds = 500
 }
 
+AWS {
+    host = "https://5lz5bv3g1h.execute-api.us-east-2.amazonaws.com/prod/hw3"
+}
+
 Conversation {
     timeout = 3000s
 }
