--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,7 @@
 Ollama {
     host = "http://localhost:11434"
     model = "llama3.2"
-    request-timeout-seconds = 3000
+    request-timeout-seconds = 5000
 }
 
 AWS {
@@ -11,6 +11,7 @@ AWS {
 
 Conversation {
     timeout = 3000s
+    numReplies=5
 }
 
 ModelController {
